--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download the fonts
-        run: apt-get install ttf-ubuntu-font-family
+        run: sudo apt install ttf-ubuntu-font-family
 
       # - name: Download the fonts
       #   run: for i in times.ttf simhei.ttf simkai.ttf simsun.ttc simsunb.ttf simfang.ttf; do wget -P fonts/ https://xugr.keybase.pub/static/fonts/$i; done
