--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,11 +23,11 @@ jobs:
       # - name: Download the fonts
       #   run: for i in times.ttf simhei.ttf simkai.ttf simsun.ttc simsunb.ttf simfang.ttf; do wget -P fonts/ https://xugr.keybase.pub/static/fonts/$i; done
       
-      - name: Copy the fonts # In newer version of fontconfig, it reads $HOME/.local/share/fonts/ but not $HOME/.fonts
-        run: mkdir -p ~/.local/share/fonts && cp -r fonts/* ~/.local/share/fonts/
+      # - name: Copy the fonts # In newer version of fontconfig, it reads $HOME/.local/share/fonts/ but not $HOME/.fonts
+      #   run: mkdir -p ~/.local/share/fonts && cp -r fonts/* ~/.local/share/fonts/
       
-      - name: Build font information caches
-        run: fc-cache -rv
+      # - name: Build font information caches
+      #   run: fc-cache -rv
 
       - name: Install TexLive and make
         uses: xu-cheng/texlive-action/full@v1
