--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download the fonts
-        run: sudo apt install ttf-mscorefonts-installer && tlmgr install anyfontsize fontawesome5
+        run: sudo apt install ttf-mscorefonts-installer 
+
+      - name: Download the fonts
+        run: tlmgr install anyfontsize fontawesome5
 
       # - name: Download the fonts
       #   run: for i in times.ttf simhei.ttf simkai.ttf simsun.ttc simsunb.ttf simfang.ttf; do wget -P fonts/ https://xugr.keybase.pub/static/fonts/$i; done
